config/static/single-pod/pod-main.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: freeipa-main
  annotations:
    openshift.io/scc: freeipa
  labels:
    app: freeipa
    role: main
spec:
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  serviceAccount: freeipa
  automountServiceAccountToken: true
  containers:
  - image: quay.io/freeipa/freeipa-openshift-container:freeipa-server
    imagePullPolicy: IfNotPresent
    name: main
    # SYSTEMD_LOG_LEVEL=debug INIT_WRAPPER=1 DEBUG_TRACE=2 PASSWORD=Secret123 NAMESPACE=freeipa SYSTEMD_OFFLINE=1 podman run -it quay.io/freeipa/freeipa-openshift-container:freeipa-server no-exit ipa-server-install -U --realm APPS.MYKUBE.KARMALABS.COM --ca-subject="CN=freeipa-11111, O=APPS.MYKUBE.KARMALABS.COM" --no-ntp --no-sshd --no-ssh --verbose
    # podman run -it -e SYSTEMD_LOG_LEVEL=debug -e INIT_WRAPPER=1 -e DEBUG_TRACE=2 -e PASSWORD=Secret123 -e NAMESPACE=freeipa -e SYSTEMD_OFFLINE=1  quay.io/freeipa/freeipa-openshift-container:freeipa-server no-exit ipa-server-install -U --realm APPS.MYKUBE.KARMALABS.COM --ca-subject="CN=freeipa-11111, O=APPS.MYKUBE.KARMALABS.COM" --no-ntp --no-sshd --no-ssh --verbose
    command:
    - /usr/sbin/init
    args:
    - no-exit
    - ipa-server-install
    - -U
    # TODO Checkout this fields before deploy
    # TODO Define variable IPA_SERVER_REALM
    - --realm
    # - APPS.MYKUBE.KARMALABS.COM
    - $(IPA_SERVER_REALM)
    # TODO Define variable IPA_SERVER_CA_SUBJECT
    # - --ca-subject=CN=freeipa-SgD5xAV, O=APPS.MYKUBE.KARMALABS.COM
    - --ca-subject=$(IPA_SERVER_CA_SUBJECT)
    # TODO Define variable IPA_SERVER_DISABLE=ntp,sshd,ssh
    - --no-ntp
    - --no-sshd
    - --no-ssh
    - --verbose
    # envFrom:
    #   - name: IPA_SERVER_HOSTNAME
    #     configMapRef:
    #       name: config
          
    ports:
    - containerPort: 80
      name: http-tcp
      protocol: TCP
    - containerPort: 443
      name: https-tcp
      protocol: TCP
    resources:
      limits:
        cpu: 2000m
        memory: 4Gi
      requests:
        cpu: 1500m
        memory: 3Gi
    securityContext:
      capabilities:
        add:
        - CHOWN
        - FOWNER
        - DAC_OVERRIDE
        - SETUID
        - SETGID
        - KILL
        - NET_BIND_SERVICE
        - SETPCAP
        - SETFCAP
        - SYS_ADMIN
        - SYS_RESOURCE
        drop:
        - NET_RAW
        - SYS_CHROOT
        - FSETID
        - AUDIT_CONTROL
        - AUDIT_READ
        - BLOCK_SUSPEND
        - DAC_READ_SEARCH
        - IPC_LOCK
        - IPC_OWNER
        - LEASE
        - LINUX_IMMUTABLE
        - MAC_ADMIN
        - MAC_OVERRIDE
        - NET_ADMIN
        - NET_BROADCAST
        - SYS_BOOT
        - SYS_MODULE
        - SYS_NICE
        - SYS_PACCT
        - SYS_PTRACE
        - SYS_RAWIO
        - SYS_TIME
        - SYS_TTY_CONFIG
        - SYSLOG
        - WAKE_ALARM
        - SYS_RAWIO
        - MKNOD
      privileged: false
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    tty: true
    volumeMounts:
    - mountPath: /data
      name: data
    - mountPath: /tmp
      name: systemd-tmp
    - mountPath: /sys
      name: systemd-sys
      readOnly: true
    - mountPath: /sys/fs/selinux
      name: systemd-sys-fs-selinux
      readOnly: true
    - mountPath: /sys/firmware
      name: systemd-sys-firmware
      readOnly: true
    - mountPath: /sys/kernel
      name: systemd-sys-kernel
      readOnly: true
    - mountPath: /var/run
      name: systemd-var-run
    - mountPath: /var/run/dirsrv
      name: systemd-var-dirsrv
  volumes:
  - emptyDir: {}
    name: data
  - hostPath:
      path: /sys
      type: DirectoryOrCreate
    name: systemd-sys
  - hostPath:
      path: /sys/fs/selinux
      type: Directory
    name: systemd-sys-fs-selinux
  - hostPath:
      path: /sys/firmware
      type: Directory
    name: systemd-sys-firmware
  - hostPath:
      path: /sys/kernel
      type: Directory
    name: systemd-sys-kernel
  - emptyDir:
      medium: Memory
    name: systemd-var-run
  - emptyDir:
      medium: Memory
    name: systemd-var-dirsrv
  - emptyDir:
      medium: Memory
    name: systemd-run-rpcbind
  - emptyDir:
      medium: Memory
    name: systemd-tmp
