config/static/single-pod/service-https.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: freeipa
  name: freeipa-web
spec:
  ports:
  # - name: http-tcp
  #   port: 80
  #   protocol: TCP
  #   targetPort: http-tcp
  - name: https-tcp
    port: 443
    protocol: TCP
    targetPort: https-tcp
  selector:
    app: freeipa
  sessionAffinity: None
  type: ClusterIP
