config/static/single-pod/route-https.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 2s
    openshift.io/host.generated: "true"
  labels:
    app: freeipa
  name: freeipa
spec:
  # host: freeipa.apps.permanent-47.idmocp.lab.eng.rdu2.redhat.com
  host: $(IPA_SERVER_HOSTNAME)
  port:
    targetPort: https-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: freeipa-web
    weight: 100
  wildcardPolicy: None
